added styling and placement, still not 100% responsive

--- a/medial-queries2/index.html
+++ b/medial-queries2/index.html
@@ -7,12 +7,21 @@
   </head>
   <body>
     <div class="container">
-      <div class="a">a</div>
-      <div class="b">b</div>
-      <div class="c">c</div>
+      <header>
+        a
+      </header>
+      <div class="flex">
+  <main>
+      b
+  </main>
+  <aside>
+      c
       <div class="d">d</div>
-      <div class="e">e</div>
-      <div class="f">f</div>
+      e
+  </aside>
+      </div>
+    </div>
+    <footer>f</footer>
     </div>
   </body>
 </html>
