Editing the box form & adjusting flex

--- a/medial-queries2/index.html
+++ b/medial-queries2/index.html
@@ -15,9 +15,9 @@
       b
   </main>
   <aside>
-      c
+      <div class="c">c</div>
       <div class="d">d</div>
-      e
+      <div class="e">e</div>
   </aside>
       </div>
     </div>
