added comments & still configuring boxes

--- a/medial-queries2/index.html
+++ b/medial-queries2/index.html
@@ -5,8 +5,10 @@
     <title>Media Queries 2</title>
     <link rel="stylesheet" href="main.css">
   </head>
+  <!-- body starts here -->
   <body>
     <div class="container">
+      <!-- Header starts here -->
       <header>
         a
       </header>
@@ -14,13 +16,14 @@
   <main>
       b
   </main>
+  <!-- Aside -->
   <aside>
       <div class="c">c</div>
       <div class="d">d</div>
       <div class="e">e</div>
   </aside>
-      </div>
     </div>
+    <!-- Footer starts here -->
     <footer>f</footer>
     </div>
   </body>
