having trouble executing my flex here. Minor updates on responsiveness

--- a/medial-queries3/index.html
+++ b/medial-queries3/index.html
@@ -5,16 +5,26 @@
     <title>Media Queries 3</title>
     <link rel="stylesheet" href="main.css">
   </head>
+  <!-- body starts here -->
   <body>
     <div class="container">
-      <div class="a">a</div>
+      <header>
+        a 
+      </header>
+  <!-- b c & d flexbox starts here -->
+    <div class="flex-1">
+     <aside>
       <div class="b">b</div>
       <div class="c">c</div>
       <div class="d">d</div>
       <div class="e">e</div>
       <div class="f">f</div>
       <div class="g">g</div>
-      <div class="h">h</div>
+     </aside>
+     <main>
+      h
+     </main>
     </div>
+   </div>
   </body>
 </html>
